--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
 
 <body>
   <header>
-    <h1>The News</h1>
-    <nav>
-      <ul>
+    <h1>
+      <a href="/">
+        <img src="./assets/images/logo.svg" alt="News logo" />
+      </a>
+    </h1>
+    <nav class="nav">
+      <img class="hamburger" src="./assets/images/icon-menu.svg" alt="Menu" />
+      <ul class="menu">
         <li><a href="#">Home</a></li>
         <li><a href="#">New</a></li>
         <li><a href="#">Popular</a></li>
